Staking modal and nav

--- a/create-stake.html
+++ b/create-stake.html
@@ -513,13 +513,50 @@
                                         <span class="alert-msg">Required *</span>
                                     </div>
                                 </div>
-                                <div class="col-12">
+
+                                <div class="col-xl-4 col-lg-6">
+                                    <div class="banner-img-block inp-block inp-block-modal alert-msg-cover">
+                                        <label for="" class="form-label">
+                                            <span class="form-label-main">
+                                                Cover Image<span> <img src="img/avtr-i.svg" alt=""></span>
+                                            </span>
+                                            <span class="img-type">(JPG, GIF, or PNG . File Size Max 2 MB)</span>
+                                        </label>
+                                        <div class="custom-inp">
+                                            <div class="inp-banner-box">
+                                                <input type="file" name="" id="banner_img_inp" class="banner-img-inp"/>
+                                                <label class="banner-img-inp-label" for="banner_img_inp">
+                                                    <img class="def-img" src="img/banner-def.svg" alt="">
+                                                    
+                                                    <!-- Banner img currently display none  -->
+                                                    <img style="display: none;" class="banner-img" src="img/pool-1.png" alt="">
+                                                </label>
+                                                <button class="img-remove-btn">
+                                                    <img src="img/img-remove.svg" alt="">
+                                                </button>
+                                            </div>
+                                        </div>
+
+                                        <!-- <input class="custom-inp" type="text"> -->
+                                        <span class="alert-msg">Required *</span>
+                                    </div>
+                                </div>
+                                <div class="col-xl-8 col-lg-6">
+                                    <div class="inp-block inp-block-modal alert-msg-cover">
+                                        <label for="" class="form-label">Description</label>
+                                        <textarea class="custom-inp custom-inp-img-area"></textarea>
+                                        <span class="alert-msg">Required *</span>
+                                    </div>
+                                </div>
+
+
+                                <!-- <div class="col-12">
                                     <div class="inp-block inp-block-modal alert-msg-cover">
                                         <label for="" class="form-label">Description</label>
                                         <textarea class="custom-inp" name="" id="" cols="30" rows="10"></textarea>
                                         <span class="alert-msg">Required *</span>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="col-md-4">
                                     <div class="inp-block inp-block-modal alert-msg-cover">
                                         <label for="" class="form-label">APY (%)</label>
