--- a/staking.html
+++ b/staking.html
@@ -322,7 +322,7 @@
                                             </div>
                                             <div class="btn-outer">
                                                 <button class="btn-default">APY:40%</button>
-                                                <button class="btn-default btn-duration">Duration:3 Months</button>
+                                                <button class="btn-default btn-duration">Duration: 2d 23h 55m</button>
                                             </div>
                                             <div class="list-order-outer">
                                                 <div class="list-order">
