--- a/terms-conditions..html
+++ b/terms-conditions..html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/dark-theme.css">
     
 </head>
-<body class="">
+<body class="theme-dark">
     <div class="body-wrapper">
         <!-- Side nav -->
         <div class="nav-block">
@@ -158,7 +158,26 @@
                         <h2>Terms & Conditions</h2>
                     </div>
                     <div class="terms-body-sec">
-                        <h3>1.Acceptance of Terms</h3>
+                        <div class="terms-content-block">
+                            <h3>1.Acceptance of Terms</h3>
+                            <p>By accessing or using the Propbase platform ("Platform"), you agree to be bound by these Terms and Conditions ("Terms"). If you do not agree with any part of these Terms, you may not use the Platform.</p>
+                        </div>
+                        <div class="terms-content-block">
+                            <h3>2.Acceptance of Terms</h3>
+                            <p>By accessing or using the Propbase platform ("Platform"), you agree to be bound by these Terms and Conditions ("Terms"). If you do not agree with any part of these Terms, you may not use the Platform.</p>
+                        </div>
+                        <div class="terms-content-block">
+                            <h3>3.Acceptance of Terms</h3>
+                            <p>By accessing or using the Propbase platform ("Platform"), you agree to be bound by these Terms and Conditions ("Terms"). If you do not agree with any part of these Terms, you may not use the Platform.</p>
+                        </div>
+                        <div class="terms-content-block">
+                            <h3>4.Acceptance of Terms</h3>
+                            <p>By accessing or using the Propbase platform ("Platform"), you agree to be bound by these Terms and Conditions ("Terms"). If you do not agree with any part of these Terms, you may not use the Platform.</p>
+                        </div>
+                        <div class="terms-content-block">
+                            <h3>5.Acceptance of Terms</h3>
+                            <p>By accessing or using the Propbase platform ("Platform"), you agree to be bound by these Terms and Conditions ("Terms"). If you do not agree with any part of these Terms, you may not use the Platform.</p>
+                        </div>
                     </div>
                 </div> 
                 
