--- a/index.html
+++ b/index.html
@@ -209,28 +209,28 @@
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-end">
                                     <li>
-                                        <a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#changePasswordModal">
+                                        <a class="dropdown-item" type="button">
                                             <span class="icon">
                                                 <img src="img/pros-mex.svg" alt="">
                                             </span> MEXC
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#logoutModal">
+                                        <a class="dropdown-item" type="button">
                                             <span class="icon">
                                                 <img src="img/pros-pan.svg" alt="">
                                             </span> Pancake
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#logoutModal">
+                                        <a class="dropdown-item" type="button">
                                             <span class="icon">
                                                 <img src="img/coin-liquid.svg" alt="">
                                             </span> Liquidswap
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item item-disbaled" type="button" data-bs-toggle="modal" data-bs-target="#logoutModal">
+                                        <a class="dropdown-item item-disbaled">
                                             <span class="icon">
                                                 <img src="img/coin-chaing.svg" alt="">
                                             </span> Chainge Finance
