--- a/staking.html
+++ b/staking.html
@@ -270,7 +270,7 @@
                                                 </div>
                                             </div>
                                             <div class="banner-img-block">
-                                                <img src="img/pool-1.png" alt="">
+                                                <img src="img/pool-1.svg" alt="">
                                             </div>
                                             <div class="timer-section">
                                                 <label>Stake Starts in : </label>
@@ -322,7 +322,7 @@
                                             </div>
                                             <div class="btn-outer">
                                                 <button class="btn-default">APY:40%</button>
-                                                <button class="btn-default btn-duration">Duration: 2d 23h 55m</button>
+                                                <button class="btn-default btn-duration">Duration: 2d 23h 55min</button>
                                             </div>
                                             <div class="list-order-outer">
                                                 <div class="list-order">
@@ -404,7 +404,7 @@
                                                 </div>
                                             </div>
                                             <div class="banner-img-block">
-                                                <img src="img/pool-2.png" alt="">
+                                                <img src="img/pool-2.svg" alt="">
                                             </div>
                                             <div class="timer-section">
                                                 <label>Stake Starts in : </label>
@@ -537,7 +537,7 @@
                                                 </div>
                                             </div>
                                             <div class="banner-img-block">
-                                                <img src="img/pool-3.png" alt="">
+                                                <img src="img/pool-3.svg" alt="">
                                             </div>
                                             <div class="timer-section">
                                                 <label>Stake Starts in : </label>
@@ -668,6 +668,9 @@
                                                         Enjoy the benefits of high yeild staking and unlock and with withdrawal anytime
                                                     </p>
                                                 </div>
+                                            </div>
+                                            <div class="banner-img-block">
+                                                <img src="img/pool-4.svg" alt="">
                                             </div>
                                             <div class="timer-section">
                                                 <label>Stake Starts in : </label>
@@ -799,6 +802,9 @@
                                                         Enjoy the benefits of high yeild staking and unlock and with withdrawal anytime
                                                     </p>
                                                 </div>
+                                            </div>
+                                            <div class="banner-img-block">
+                                                <img src="img/pool-5.svg" alt="">
                                             </div>
                                             <div class="timer-section">
                                                 <label>Stake Starts in : </label>
@@ -932,6 +938,9 @@
                                                         Enjoy the benefits of high yeild staking and unlock and with withdrawal anytime
                                                     </p>
                                                 </div>
+                                            </div>
+                                            <div class="banner-img-block">
+                                                <img src="img/pool-6.svg" alt="">
                                             </div>
                                             <div class="timer-section">
                                                 <label>Stake Starts in : </label>
