staking Modal updation

--- a/staking.html
+++ b/staking.html
@@ -1147,6 +1147,14 @@
                             <span class="alert-msg">Required *</span>
                         </div>
                     </div>
+                    <div class="stake-min-row">
+                        <div class="stake-min-block">
+                            Min Stake Value: <span class="val">$Props 100</span>
+                        </div>
+                        <div class="stake-min-block">
+                            Max Stake Value: <span class="val">$Props 258</span>
+                        </div>
+                    </div>
                     <div class="rwd-inner">
                         <div class="detail-outer">
                             <div class="img-sec">
