search and portfolio

--- a/create-stake.html
+++ b/create-stake.html
@@ -157,7 +157,7 @@
                     <div class="block-right">
                         <div class="title-search-box me-2">
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-search">
+                                <input type="text" class="form-control" placeholder="Wallet Address, Transactions" aria-label="Search" aria-describedby="button-search">
                                 <button class="btn" type="button" id="button-search">
                                     <img src="img/search.svg" alt="">
                                 </button>
