--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                 <div class="form-group">
                     <div class="input-group alert-msg-cover">
                         <label>Email ID</label>
-                        <input type="text" class="form-control" placeholder="EmailID">
+                        <input type="text" class="form-control" placeholder="Email ID">
                         <img src="img/mail-icon.svg" class="icon-left">
                         <span class="alert-msg">Required *</span>
                     </div>
@@ -87,7 +87,7 @@
                 <div class="form-group">
                     <div class="input-group">
                         <label>Email ID</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" placeholder="Email Id">
                         <img src="img/mail-icon.svg" class="fgt-mail-icon">
                     </div>
                     <div class="btn-otr">
