paswd alrt fixing

--- a/index.html
+++ b/index.html
@@ -534,11 +534,12 @@
             <div class="modal-body">
                
                 <div class="form-group">
-                    <div class="input-group">
+                    <div class="input-group alert-msg-cover">
                         <label>Old password</label>
                         <input type="text" class="form-control">
                         <img src="img/pass-icon.svg" class="fgt-mail-icon">
                         <button class="fgt-view-icon"><img src="img/view.svg"></button>
+                        <span class="alert-msg">Required *</span>
                     </div>
                     <div class="input-group">
                         <label>Enter New password</label>
