home page complated

--- a/staking.html
+++ b/staking.html
@@ -1287,6 +1287,12 @@
                     <div class="btn-otr">
                         <a href="#" class="btn-stake withdraw-btn">Unstake</a>
                     </div>
+                    <div class="modal-info-cover mt-2">
+                        <div class="modal-info-block w-100">
+                            <img src="img/i-dark.svg" alt=""> 
+                            Please connect to your wallet holding reward.
+                        </div>
+                    </div>
                     <div class="policy-stake">
                         <div class="head-policy">
                             <img src="img/info-icon.svg">
