home page updates

--- a/home.html
+++ b/home.html
@@ -601,9 +601,9 @@
                                     </div>
                                     <div class="img-hldr">
                                         <img src="img/brand-mob-bg1.png" alt="">
-                                        <div class="cta-float">
-                                            <a href="#">Apply Now</a>
-                                        </div>
+                                        <a href="#" class="cta-float">
+                                            Apply Now
+                                        </a>
                                     </div>
                                 </section>
                             <!-- brand ambassidor -->
@@ -793,9 +793,9 @@
                                     <div class="text-sec">
                                         0xe50684a338db732d8fb8a3ac71c4b8633878bd0193bca5de2ebc852a83b35099::propbase_coin::PROPS
                                     </div>
-                                    <div class="copy-icon">
+                                    <button class="copy-icon">
                                         <img src="img/copy-icon.svg">
-                                    </div>
+                                    </button>
                                    
                                  </div>
                             </div>
