--- a/home.html
+++ b/home.html
@@ -515,7 +515,7 @@
                               <div class="box-inner">
                                 <div class="box-icon"><img src="img/step3.svg" alt="step1"></div>
                                 <div class="box-subtitle">STEP 03</div>
-                                <div class="box-title">Select Stake Amount </div>
+                                <div class="box-title">Input Stake Amount </div>
                                 <div class="box-content"><p>Decide the amount of PROPS tokens you want to stake. This can vary based on your risk tolerance and investment goals. Once you've chosen your staking amount, initiate the staking process through the platform by confirming the transaction.
                                 </p></div>
                               </div>
@@ -1026,7 +1026,7 @@
                           <!-- props on -->
 
                           <section class="by-props-sec">
-                            <div class="heading">By <span>$PROPS on:</span></div>
+                            <div class="heading">Buy <span>$PROPS on:</span></div>
                             <div class="four-props">
                                 <div class="box-props">
                                     <p><span class="imgs-props"><img src="img/props1.svg" alt="props1"></span> <span class="text-sec">MEXC</span></p>
