--- a/about-props.html
+++ b/about-props.html
@@ -544,7 +544,8 @@
                                     <h4 class="col-title">Token Distribution</h4>
 
                                     <div class="img-wrp">
-                                        <img src="img/chart.svg" alt="token graph">
+                                        <img class="chart-light" src="img/chart.svg" alt="token graph">
+                                        <img class="chart-dark" src="img/chart-dark.svg" alt="token graph">
                                     </div>
                                 </div>
 
@@ -779,7 +780,8 @@
                         <section class="props-accumulation floating-icon-left floating-icon-right">
                             <h2 class="title">$PROPS inflation schedule: Empowering Investors <br>with<span> long-term wealth accumulation</span></h2>
                            <div class="graph-wrap text-center">
-                            <img src="img/graph-img.png" alt="graph img">
+                            <img class="img-light" src="img/graph-img-light.svg" alt="graph img">
+                            <img class="img-dark" src="img/graph-img-dark.svg" alt="graph img">
                            </div>
                         </section>
                         <!-- props-accumulation -->
