--- a/staking.html
+++ b/staking.html
@@ -1353,7 +1353,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="text-center success-btn-block">
+                        <div class="text-center success-btn-block aptos-btn-block">
                             <button class="btn-border"><img src="img/aptos-exp.svg" alt=""> View in Aptos Explorer</button>
                             <button class="btn-black">Ok</button>
                         </div>
