--- a/about-props.html
+++ b/about-props.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="css/campaign.css">
     <link rel="stylesheet" href="css/propson.css"> -->
 </head>
-<body class="">
+<body class="theme-dark">
     <div class="body-wrapper">
         <!-- Side nav -->
         <div class="nav-block">
@@ -457,7 +457,7 @@
                             </div>
                         </div>
                         
-                        <section class="section-powering">
+                        <section class="section-powering floating-icon-left">
                             <div class="row">
                                 <div class="col">
                                     <h3 class="title text-center">Powering the Entire <span>Propbase Ecosystem</span></h3>
