--- a/create-stake.html
+++ b/create-stake.html
@@ -292,7 +292,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
+                                <!-- <tr>
                                     <td>Long Term</td>
                                     <td>08/29/2023</td>
                                     <td class="text-dark text-b">233.02</td>
@@ -415,9 +415,9 @@
                                             </button>
                                         </div>
                                     </td>
-                                </tr>
+                                </tr> -->
                                 <td colspan="11">
-                                    <div class="table-no-data">
+                                    <div class="table-no-data table-no-data">
                                         <div class="img-block">
                                             <img src="img/no-data.svg" alt="" class="no-data-img">
                                             <img src="img/no-data-black.svg" alt="" class="no-data-img d-none">
