--- a/create-stake.html
+++ b/create-stake.html
@@ -417,7 +417,7 @@
                                     </td>
                                 </tr> -->
                                 <td colspan="11">
-                                    <div class="table-no-data table-no-data">
+                                    <div class="table-no-data table-no-data-h">
                                         <div class="img-block">
                                             <img src="img/no-data.svg" alt="" class="no-data-img">
                                             <img src="img/no-data-black.svg" alt="" class="no-data-img d-none">
