--- a/create-stake.html
+++ b/create-stake.html
@@ -292,7 +292,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <!-- <tr>
+                                <tr>
                                     <td>Long Term</td>
                                     <td>08/29/2023</td>
                                     <td class="text-dark text-b">233.02</td>
@@ -313,7 +313,7 @@
                                                 <img src="img/td-delete.svg" alt="" class="icon-light">
                                                 <img src="img/td-delete-dark.svg" alt="" class="icon-dark">
                                             </button>
-                                            <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                                            <button class="td-action-btn action-btn-highlight" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                                 <img src="img/td-add-rewards.svg" alt="" class="icon-light">
                                                 <img src="img/td-add-rewards-dark.svg" alt="" class="icon-dark">
                                             </button>
@@ -415,7 +415,7 @@
                                             </button>
                                         </div>
                                     </td>
-                                </tr> -->
+                                </tr>
                                 <td colspan="11">
                                     <div class="table-no-data table-no-data-h">
                                         <div class="img-block">
