--- a/home.html
+++ b/home.html
@@ -727,7 +727,7 @@
                                             <span class="numerics">$28,651,568</span>
                                         </div>
                                         <div class="statistics-blks">
-                                            <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>24 Hour Trading
+                                            <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>24 Hour Trading Volume
                                             </h5>
                                             <span class="numerics">$49,861,578</span>
                                         </div>
@@ -742,7 +742,7 @@
                                             <span class="numerics">$49,861,578</span>
                                         </div>
                                         <div class="statistics-blks">
-                                            <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>Total Supply                                            </h5>
+                                            <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>$PROPS Circulating Supply</h5>
                                             <span class="numerics">$28,651,568</span>
                                         </div>
                                         <div class="statistics-blks">
