--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/dark-theme.css">
+    <link rel="stylesheet" href="fonts/fonts.css">
 </head>
 <body class="theme-dark">
     <div class="body-wrapper">
